--- a/ansible/common-vars.yaml
+++ b/ansible/common-vars.yaml
@@ -1,5 +1,3 @@
-#!/bin/sh
-
 # -*- coding: utf-8 -*-
 # (c) 2013, Steve Morin <steve@stevemorin.com>
 #
@@ -17,3 +15,8 @@
 #
 # You should have received a copy of the GNU Affero General Public License
 # along with this Project.  If not, see <http://www.gnu.org/licenses/agpl-3.0.html>.
+
+---
+downloads: /.ansible-downloads/
+install_target: /Volumes/OSX
+mount_path: /Volumes/Vagrant/
